increase tooltip line-height

--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -30,6 +30,7 @@
       position: absolute;
       z-index: 10;
       font-size: 13px;
+      line-height: 1.5;
     }
 
     &.tooltip:hover .tooltip-text {
