--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -2,10 +2,8 @@
 
 .layer-ui__wrapper {
   .encrypted-icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-
+    position: relative;
+    margin-left: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,8 +18,8 @@
     &.tooltip .tooltip-text {
       visibility: hidden;
       width: 20rem;
-      top: 100%;
-      right: 0;
+      bottom: calc(50% + 0.8rem);
+      left: -5px;
       background-color: $oc-black;
       color: $oc-white;
       text-align: center;
