--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -257,6 +257,10 @@ button,
   align-items: flex-start;
   cursor: default;
   pointer-events: none !important;
+
+  section {
+    display: flex;
+  }
 }
 
 .App-menu_bottom > * {
