--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -31,7 +31,17 @@
       line-height: 1.5;
     }
 
-    &.tooltip:hover .tooltip-text {
+    // the following 3 rules ensure that the tooltip doesn't show (nor affect
+    //  the cursor) when you drag over when you draw on canvas, but at the same
+    //  time it still works when clicking on the link/shield
+
+    body:active &.tooltip:not(:hover) {
+      pointer-events: none;
+    }
+    body:not(:active) &.tooltip:hover .tooltip-text {
+      visibility: visible;
+    }
+    .tooltip-text:hover {
       visibility: visible;
     }
   }
