--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -29,6 +29,7 @@
       z-index: 10;
       font-size: 13px;
       line-height: 1.5;
+      white-space: pre-wrap;
     }
 
     // the following 3 rules ensure that the tooltip doesn't show (nor affect
