Remove box-shadow  from  shapes in zen mode

--- a/src/components/Island.scss
+++ b/src/components/Island.scss
@@ -6,4 +6,8 @@
   border-radius: var(--border-radius-m);
   padding: calc(var(--padding) * var(--space-factor));
   position: relative;
+
+  &.zen-mode {
+    box-shadow: none;
+  }
 }
