--- a/src/components/FixedSideContainer.css
+++ b/src/components/FixedSideContainer.css
@@ -14,7 +14,10 @@
   right: var(--margin);
   z-index: 2;
 }
+.FixedSideContainer_side_top.zen-mode {
+  right: 42px;
 
+}
 /* TODO: if these are used, make sure to implement RTL support
 .FixedSideContainer_side_left {
   left: var(--margin);
