--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -46,4 +46,20 @@
       visibility: visible;
     }
   }
+
+  &__canvas-actions {
+    visibility: visible;
+    transition: visibility 1s ease-in-out;
+    .ToolIcon_type_button {
+      transition: visibility 1s ease-in-out;
+      visibility: visible;
+    }
+    &.zen-mode {
+      visibility: hidden;
+
+      .ToolIcon_type_button {
+        visibility: hidden;
+      }
+    }
+  }
 }
