--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -71,6 +71,13 @@
       background-color: var(--button-gray-3);
     }
   }
+
+  &--show {
+    visibility: visible;
+  }
+  &--hide {
+    visibility: hidden;
+  }
 }
 
 .ToolIcon_type_radio,
