hide zoom using transform

--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -62,4 +62,11 @@
       }
     }
   }
+
+  &__footer-left {
+    transition: transform 0.5s ease-in-out;
+    &.zen-mode {
+      transform: translate(-999px, 0);
+    }
+  }
 }
