render correctly the text element

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -456,3 +456,13 @@ button,
   margin: 0;
   font-size: 18px;
 }
+
+.ql-font-Virgil {
+  font-family: Virgil;
+}
+.ql-font-Cascadia {
+  font-family: Cascadia;
+}
+.ql-font-Helvetica {
+  font-family: Helvetica;
+}
