fix lock animation

--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -169,10 +169,13 @@
 }
 
 .zen-mode-visibility {
-  transition: visibility 0.5s ease-in-out;
   visibility: visible;
+  opacity: 1;
+  transition: visibility 0s linear 0s, opacity 0.5s;
 
   &.hidden {
     visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 300ms, opacity 0.5s;
   }
 }
