--- a/src/components/LayerUI.scss
+++ b/src/components/LayerUI.scss
@@ -53,12 +53,14 @@
     position: absolute;
     width: 40px;
   }
+
   &__footer {
     position: absolute;
     bottom: 0px;
     right: 0;
     width: 190px;
   }
+
   .zen-mode-transition {
     transition: transform 0.5s ease-in-out;
     &.transition-left {
@@ -67,5 +69,15 @@
     &.transition-right {
       transform: translate(999px, 0px);
     }
+  }
+
+  .switch-zen-mode {
+    height: 30px;
+    position: absolute;
+    bottom: 10px;
+    right: 230px;
+    font-size: 10px;
+    padding: 10px;
+    font-weight: 500;
   }
 }
