--- a/src/components/ContextMenu.scss
+++ b/src/components/ContextMenu.scss
@@ -11,26 +11,26 @@
   padding: 0.25rem 0;
   background-color: $oc-gray-1;
   border: 1px solid $oc-gray-5;
-}
 
-.context-menu-option {
-  position: relative;
-  width: 100%;
-  min-width: 9.5rem;
-  margin: 0;
-  padding: 0.25rem 1rem 0.25rem 1.25rem;
-  text-align: start;
-  border-radius: 0;
-  background-color: transparent;
-  border: none;
-  white-space: nowrap;
-}
+  &-option {
+    position: relative;
+    width: 100%;
+    min-width: 9.5rem;
+    margin: 0;
+    padding: 0.25rem 1rem 0.25rem 1.25rem;
+    text-align: start;
+    border-radius: 0;
+    background-color: transparent;
+    border: none;
+    white-space: nowrap;
 
-.context-menu-option:hover {
-  color: $oc-white;
-  background-color: $oc-blue-5;
-}
+    &:hover {
+      color: $oc-white;
+      background-color: $oc-blue-5;
+    }
 
-.context-menu-option:focus {
-  z-index: 1;
+    &:focus {
+      z-index: 1;
+    }
+  }
 }
