--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -16,118 +16,134 @@
   background-color: var(--button-gray-1);
   -webkit-tap-highlight-color: transparent;
   border-radius: var(--space-factor);
-}
 
-.ToolIcon__icon {
-  width: 2.5rem;
-  height: 2.5rem;
+  &__icon {
+    width: 2.5rem;
+    height: 2.5rem;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  border-radius: var(--space-factor);
+    border-radius: var(--space-factor);
 
-  svg {
-    position: relative;
-    height: 1em;
+    svg {
+      position: relative;
+      height: 1em;
+    }
+
+    & + .ToolIcon__label {
+      margin-inline-start: 0;
+    }
+
+    .unlocked-icon {
+      :root[dir="ltr"] & {
+        left: 2px;
+      }
+
+      :root[dir="rtl"] & {
+        right: 2px;
+      }
+    }
   }
 
-  & + .ToolIcon__label {
-    margin-inline-start: 0;
+  &__label {
+    font-family: var(--ui-font);
+    margin: 0 0.8em;
+    text-overflow: ellipsis;
   }
-}
 
-.ToolIcon__label {
-  font-family: var(--ui-font);
-  margin: 0 0.8em;
-  text-overflow: ellipsis;
-}
+  .excalidraw &_type_button,
+  &_type_button {
+    padding: 0;
+    border: none;
+    margin: 0;
+    font-size: inherit;
 
-.ToolIcon_size_s .ToolIcon__icon {
-  width: 1.4rem;
-  height: 1.4rem;
-  font-size: 0.8em;
-}
+    &:hover {
+      background-color: var(--button-gray-1);
+    }
 
-.ToolIcon_type_button {
-  padding: 0;
-  border: none;
-  margin: 0;
-  font-size: inherit;
-
-  &:hover {
-    background-color: var(--button-gray-1);
-  }
-  &:active {
-    background-color: var(--button-gray-2);
-  }
-  &:focus {
-    box-shadow: 0 0 0 2px var(--button-blue);
-  }
-  &.ToolIcon--selected {
-    background-color: var(--button-gray-2);
     &:active {
+      background-color: var(--button-gray-2);
+    }
+
+    &:focus {
+      box-shadow: 0 0 0 2px var(--button-blue);
+    }
+
+    &.ToolIcon--selected {
+      background-color: var(--button-gray-2);
+
+      &:active {
+        background-color: var(--button-gray-3);
+      }
+    }
+
+    &--show {
+      visibility: visible;
+    }
+
+    &--hide {
+      visibility: hidden;
+    }
+  }
+
+  &_type_radio,
+  &_type_checkbox {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+
+    &:checked + .ToolIcon__icon {
+      background-color: var(--button-gray-2);
+    }
+
+    &:focus + .ToolIcon__icon {
+      box-shadow: 0 0 0 2px var(--button-blue);
+    }
+
+    &:active + .ToolIcon__icon {
       background-color: var(--button-gray-3);
     }
   }
 
-  &--show {
-    visibility: visible;
-  }
-  &--hide {
-    visibility: hidden;
-  }
-}
-
-.ToolIcon_type_radio,
-.ToolIcon_type_checkbox {
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-
-  &:checked + .ToolIcon__icon {
-    background-color: var(--button-gray-2);
-  }
-  &:focus + .ToolIcon__icon {
-    box-shadow: 0 0 0 2px var(--button-blue);
-  }
-  &:active + .ToolIcon__icon {
-    background-color: var(--button-gray-3);
-  }
-}
-
-.ToolIcon_type_floating {
-  background-color: transparent;
-  &:hover {
+  &_type_floating {
     background-color: transparent;
-  }
-  &:active {
-    background-color: transparent;
-  }
-  &:focus {
-    box-shadow: none;
-  }
-  .ToolIcon__icon {
-    width: 2rem;
-    height: 2em;
-  }
-}
 
-.ToolIcon.ToolIcon__lock {
-  &.ToolIcon_type_floating {
-    margin-left: 0.1rem;
-  }
-}
+    &:hover {
+      background-color: transparent;
+    }
 
-.ToolIcon__keybinding {
-  position: absolute;
-  bottom: 2px;
-  right: 3px;
-  font-size: 0.5em;
-  color: var(--button-gray-3);
-  font-family: var(--ui-font);
-  user-select: none;
+    &:active {
+      background-color: transparent;
+    }
+
+    &:focus {
+      box-shadow: none;
+    }
+
+    .ToolIcon__icon {
+      width: 2rem;
+      height: 2em;
+    }
+  }
+
+  &.ToolIcon__lock {
+    &.ToolIcon_type_floating {
+      margin-left: 0.1rem;
+    }
+  }
+
+  &__keybinding {
+    position: absolute;
+    bottom: 2px;
+    right: 3px;
+    font-size: 0.5em;
+    color: var(--button-gray-3);
+    font-family: var(--ui-font);
+    user-select: none;
+  }
 }
 
 @media (max-width: 360px) {
@@ -156,26 +172,5 @@
     svg {
       position: static;
     }
-  }
-}
-
-.unlocked-icon {
-  :root[dir="ltr"] & {
-    left: 2px;
-  }
-  :root[dir="rtl"] & {
-    right: 2px;
-  }
-}
-
-.zen-mode-visibility {
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 0s linear 0s, opacity 0.5s;
-
-  &.hidden {
-    visibility: hidden;
-    opacity: 0;
-    transition: visibility 0s linear 300ms, opacity 0.5s;
   }
 }
